fix(product): implement stock card, unit conversions, weight selling and pricing management